--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="cabecera">
+            Hyperblog
+        </div>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
     </body>
